# derzug

./: .gitignore  MANIFEST.in  README.md  RELEASING.md  environment.yml  prek.toml  pyproject.toml  setup.py  test_1.ows
.agents/: agents.md
.agents/plans/: annotations.md  dev-hot-reload.md  logging.md  waterfall-datetime-axis-issue.md  workflow-core-design.md
.github/: test_code.sh
.github/actions/load-shared-vars/: action.yml
.github/actions/mamba-install-derzug/: action.yml
.github/workflows/: ci.yml  lint.yml  manual_demo.yml  release.yml  runtests.yml
docs/: _quarto.yml  index.qmd  release.md
docs/dev/: architecture.qmd  creating_widgets.qmd  design.md  dev.qmd  guidelines.md  roadmap.md  streaming-engine-spec.md  widget_development.md  workflow-design.md  workflow_spec.md
docs/dev/plans/: waterfall3d.md  widget_workflow_cleanup.md
resources/linux/: derzug.desktop
src/derzug/: __init__.py  _anyqt_patch.py  annotations_config.py  cli.py  constants.py  exceptions.py  orange.py  version.py
src/derzug/core/: __init__.py  abstractcontrols.py  patchdimwidget.py  widget_execution.py  widget_messages.py  widget_runtime.py  zugmodel.py  zugwidget.py
src/derzug/dascore/: __init__.py  namespace.py
src/derzug/models/: annotations.py  computation.py  selection.py
src/derzug/styles/: orange.qss
src/derzug/utils/: __init__.py  annotation_metadata.py  annotations.py  code2widget.py  display.py  docstring.py  dynamic_rows.py  example_parameters.py  misc.py  optional_imports.py  parsing.py  plot_axes.py  pyqt_ui_builder.py  qt.py  qt_runtime.py  spool.py  testing.py
src/derzug/views/: orange.py  orange_errors.py  orange_registry.py  summary.py  waterfall.py
src/derzug/widgets/: __init__.py  aggregate.py  analytic.py  annotation2dataframe.py  annotation_editor.py  annotation_overlay.py  annotation_toolbox.py  annotations.py  calculus.py  code.py  composite.py  coords.py  dataframe_loader.py  detrend.py  fbe.py  filter.py  fourier.py  ndim_controls.py  norm.py  normalize.py  patchviewer.py  phase_shift.py  playaudio.py  resample.py  rolling.py  select.py  selection.py  spool.py  stft.py  table2annotation.py  taper.py  ufunc.py  ufunc_unary.py  waterfall.py  wiggle.py
src/derzug/workflow/: __init__.py  compiler.py  context.py  disabled.py  executor.py  graph.py  model.py  pipe.py  provenance.py  results.py  sink.py  source.py  task.py  widget_tasks.py
src/derzug/workflows/: 010_introduction.ows  01_Quick Start.ows  020_basic_dss.ows  030-rolling-average.ows
tests/: conftest.py  test_cli.py  test_conftest.py  test_dascore_namespace.py  test_integrations.py  test_orange_setting.py  test_version.py  test_workflow_compiler.py  test_workflow_engine.py
tests/stories/: README.md  auto-pick-arrivals-with-confidence-review.md  build-a-detection-candidate-from-a-long-spool.md  classify-detected-events-for-triage.md  compare-multiple-processing-branches.md  crop-an-event-window.md  detect-and-rank-leakage-events-with-dts.md  detect-weak-repeating-events-with-template-matching.md  filter-and-compare-noise.md  inspect-frequency-content.md  load-and-screen-spool.md  localize-a-source-from-reviewed-picks.md  map-thermal-anomalies-in-borehole-dts.md  monitor-tunnel-or-bridge-deformation-with-dss.md  prepare-a-clean-handoff-product.md  reduce-data-for-export.md  run-near-field-array-processing-for-directionality.md  screen-structural-tap-tests-with-impact-arrivals.md  select-and-annotate-a-waterfall-region.md  track-crack-initiation-and-growth-with-dss.md
tests/test_core/: test_abstractcontrols.py  test_model.py  test_patchdimwidget.py  test_zugwidget.py
tests/test_models/: test_annotations.py  test_computation.py
tests/test_utils/: test_annotation_metadata.py  test_annotations.py  test_code2widget.py  test_display.py  test_docstring.py  test_example_parameters.py  test_misc.py  test_parsing.py  test_plot_axes.py  test_spool_utils.py
tests/test_views/: test_orange_qt.py  test_summary.py
tests/test_widgets/: test_aggregate.py  test_analytic.py  test_annotation2dataframe.py  test_annotation_editor.py  test_annotation_overlay.py  test_annotation_toolbox.py  test_annotations_widget.py  test_calculus.py  test_code.py  test_composite.py  test_coords.py  test_dataframe_loader.py  test_detrend.py  test_fbe.py  test_filter.py  test_fourier.py  test_norm.py  test_normalize.py  test_patchviewer.py  test_phase_shift.py  test_playaudio.py  test_resample.py  test_rolling.py  test_select.py  test_selection.py  test_spool.py  test_stft.py  test_table2annotation.py  test_taper.py  test_ufunc.py  test_ufunc_unary.py  test_waterfall.py  test_wiggle.py
tests/test_workflows/: test_save_annotations.ows
